--- a/themes/rcforward/sass/_404.scss
+++ b/themes/rcforward/sass/_404.scss
@@ -57,7 +57,17 @@
       padding-top:5rem;
     }
     width:100%;
-    height:75vh;
+    height:400px;
+    @include tablet{
+      height:500px;
+    }
+    @include tablet-large{
+      height:600px;
+    }
+    @include desktop{
+      height:700px;
+    }
+    
     @include display-flex();
     align-items: flex-start;
     .image-404{
