--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -2802,7 +2802,7 @@ ol.flickity-page-dots {
   overflow: hidden;
   padding-top: 3rem;
   width: 100%;
-  height: 75vh;
+  height: 400px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2822,6 +2822,15 @@ ol.flickity-page-dots {
   @media (min-width: 600px) {
     .error404 .content-404 {
       padding-top: 5rem; } }
+  @media (min-width: 600px) {
+    .error404 .content-404 {
+      height: 500px; } }
+  @media (min-width: 800px) {
+    .error404 .content-404 {
+      height: 600px; } }
+  @media (min-width: 1000px) {
+    .error404 .content-404 {
+      height: 700px; } }
   .error404 .content-404 .image-404 {
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
