--- a/themes/rcforward/sass/_page-templates.scss
+++ b/themes/rcforward/sass/_page-templates.scss
@@ -392,7 +392,7 @@
                     .percentage {
                       font-size: 4rem;
                       font-weight: bolder;
-                      margin: 3.3rem .5rem;
+                      margin: 3.3rem 0.5rem;
                     }
                     .description {
                       font-size: 1.4rem;
@@ -444,7 +444,6 @@
                         font-size: 5rem;
                         margin-right: 0;
                         margin-left: 0;
-
                       }
                       .description {
                         margin: 0;
@@ -464,19 +463,48 @@
             .fund-image {
               img {
                 object-position: 50% 48%;
-  
-    
               }
             }
           }
-         
         }
       }
-     
+    }
+    .related-charities {
+      max-width: 283px;
+      margin: 0.4rem auto;
+      .flickity-viewport {
+        height: 320px;
+        .flickity-slider {
+          .carousel-cell {
+            height: 320px;
+            @include display-flex();
+            flex-direction: column;
+            justify-content: space-around;
+            .charity-description {
+              font-size: 1.2rem;
+              margin: 0 0.7rem;
+            }
+            .read-more-button {
+              color: $credible__blue;
+              padding-left: 7rem;
+            }
+            .charity-logo {
+              position: static;
+              border-radius: 0;
+              padding: 0 1rem;
+              transform: translateX(0%);
+              top: 0;
+              max-width: 100%;
+              max-height: 40%;
+              height: auto;
+              width: auto;
+            }
+          }
+        }
+      }
     }
   }
 }
-
 
 /* The Team page */
 .page-template-page-team {
