--- a/themes/rcforward/sass/_page-templates.scss
+++ b/themes/rcforward/sass/_page-templates.scss
@@ -17,17 +17,27 @@
       .entry-title {
         text-align: center;
         margin: 0;
+        font-size: 1.6rem;
         padding-top: 4rem;
-        font-size: 3rem;
         color: $credible__blue;
+        @include tablet {
+          font-size: 1.8rem;
+        }
+        @include desktop {
+          font-size: 2rem;
+        }
       }
       .page-description {
         width: 68%;
-        font-size: 1.4rem;
         text-align: center;
         margin: 1.3rem auto;
+        font-size: 1.1rem;
         line-height: 2.5rem;
+        @include tablet {
+          font-size: 1.4rem;
+        }
         @include desktop {
+          font-size: 1.5rem;
           width: 50%;
         }
       }
@@ -42,8 +52,15 @@
             @include display-flex();
           }
           .work-step {
+            width: 18rem;
             @include display-flex();
             flex-direction: row;
+            @include tablet {
+              width: 27rem;
+            }
+            @include tablet-large {
+              width: 42rem;
+            }
 
             @include desktop {
               @include display-flex();
@@ -56,6 +73,11 @@
               }
             }
             .mobile-step {
+              padding-bottom: 1.7rem;
+              @include tablet {
+                padding-bottom: 0;
+                padding-top: 1rem;
+              }
               @include desktop {
                 display: none;
               }
@@ -65,31 +87,39 @@
               .work-step-title,
               .work-step-description {
                 margin: 1rem;
+                font-size: 1rem;
+
+                line-height: 1.5rem;
               }
-            }
-            .work-step-title,
-            .work-step-description {
-              font-size: 1.3rem;
             }
             .work-step-title {
               font-weight: bolder;
               color: $credible__blue;
+              @include tablet {
+                margin-top: 0;
+              }
+              @include desktop {
+
+              }
             }
           }
-          & .work-step:last-child {
-            .mobile-step {
-              padding-bottom: 4rem;
-            }
-          }
+         
         }
       }
       .entry-donate-page {
         @include display-flex();
         flex-direction: column;
         .get-started {
-          font-size: 1.4rem;
+          font-size: 1rem;
           font-weight: bolder;
+          @include tablet {
+            font-size: 1.2rem;
+          }
+          @include desktop {
+
+          }
         }
+        
         @include desktop {
           margin: 2rem 0;
         }
@@ -119,15 +149,20 @@
         }
         .contact-us-button {
           border: 2px solid $innovative__purple;
-          font-size: 1.5rem;
+          font-size: 1.1rem;
           font-weight: 700;
-          padding: 1.6rem 4rem;
+  padding: 1.2rem 2.6rem;
+          
           display: inline-block;
           color: $innovative__purple;
           border-radius: 8px;
           @include tablet {
+            font-size: 1.4rem;
+            padding: 1.4rem 3.2rem;
           }
           @include desktop {
+            font-size: 1.7rem;
+            padding: 1.7rem 4rem;
           }
         }
       }
@@ -138,9 +173,15 @@
       flex-direction: column;
       p {
         strong {
-          font-size: 2.6rem;
+          font-size: 2rem;
           color: $credible__blue;
           line-height: 3rem;
+          @include tablet {
+            font-size: 2.2rem
+          }
+          @include desktop {
+            font-size: 2.5rem;
+          }
         }
       }
 
@@ -209,9 +250,13 @@
           margin-bottom: 0;
           & p:nth-child(2n),
           p:last-child {
-            font-size: 1.2rem;
+            font-size: 1rem;
             width: 90%;
             line-height: 1.97rem;
+            @include tablet {
+              font-size: 1.2rem;
+            }
+      
           }
         }
       }
@@ -483,6 +528,8 @@
             .charity-description {
               font-size: 1.2rem;
               margin: 0 0.7rem;
+              font-size: 1rem;
+              line-height: 1.6rem;
             }
             .read-more-button {
               color: $credible__blue;
@@ -494,7 +541,7 @@
               padding: 0 1rem;
               transform: translateX(0%);
               top: 0;
-              max-width: 100%;
+              max-width: 92%;
               max-height: 40%;
               height: auto;
               width: auto;
@@ -660,8 +707,7 @@
         .plus-symbol {
           display: flex;
           cursor: pointer;
-          .fa-plus {
-          }
+        
         }
       }
       .answer {
