Remove unnecessary code from blogscss

--- a/themes/rcforward/sass/_404.scss
+++ b/themes/rcforward/sass/_404.scss
@@ -3,6 +3,7 @@
 --------------------------------------------------------------*/
 .page-template-404 {
   .container-404 {
+        max-width: 100%;
     background-image: url(../../assets/images/output-onlinepngtools.png);
     background-size: contain;
     background-position: 4px;
