Accept incoming changes from 404.scss

--- a/themes/rcforward/sass/_charity.scss
+++ b/themes/rcforward/sass/_charity.scss
@@ -155,6 +155,7 @@
           justify-content: center;
         }
         .main-content {
+          background-color:#f9f5ed;
           display: flex;
           flex-direction: column;
           padding: 42px;
