add chimp donate file and change header dropdown

--- a/themes/rcforward/sass/_blog.scss
+++ b/themes/rcforward/sass/_blog.scss
@@ -255,9 +255,9 @@
 .next-post-main {
   display: none;
 }
-.pre-nav-1, .next {
-  display: none;
-}
+// .pre-nav-1, .next {
+//   display: none;
+// }
 .impactfully {
   @include desktop {
     display: none;
