--- a/themes/rcforward/sass/_donate.scss
+++ b/themes/rcforward/sass/_donate.scss
@@ -272,6 +272,9 @@
                 height:22vw;
                 max-height:210px;
                 border-radius: 50%;
+                @include font-size(1.2);
+            }
+            @include desktop{
                 @include font-size(1.5);
             }
 
