--- a/themes/rcforward/sass/_hamburger.scss
+++ b/themes/rcforward/sass/_hamburger.scss
@@ -7,6 +7,7 @@
  */
 
 .hamburger:hover {
+
   opacity: 0.7;
 }
 .hamburger.is-active:hover {
@@ -77,7 +78,7 @@
   background: $credible__blue;
   border: none;
   padding-right: 25px;
-  @include desktop {
+  @include tablet-large {
     display: none;
   }
 }
@@ -92,7 +93,7 @@
     top: 30%;
     font-size: 24px;
     position: absolute;
-    @include desktop {
+    @include tablet-large {
       display: none;
     }
   } // &::after
